kube-deployment/kc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: kc
  name: kc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kc
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: kc
    spec:
      containers:
        - args:
            - start
            - --optimized
            - --hostname=http://localhost:8080
          image: kc
          name: kc
      restartPolicy: Always
