kube-deployment/pgadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: sso
  labels:
    app: pgadmin
spec:
  ports:
  - port: 8088
    targetPort: 80
    name: pgadmin
  selector:
    app: pgadmin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: dbuser@example.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: change_me
          image: docker.io/dpage/pgadmin4:latest
          name: pgadmin
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
