kube-deployment/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
